--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -73,7 +73,9 @@
     <body id="login-body">
         <main id="login-main">
             <div id="login-left">
-                <h1 id="login-title"><span>s</span>IMS</h1>
+                <a href = "{{ url_for('index') }}" style="text-decoration: none;">
+                    <h1 id="login-title"><span>s</span>IMS</h1>
+                </a>
                 <p id="login-subtitle"><span>simple</span> inventory management system</p>
             </div>
 
