--- a/src/static/style_main.css
+++ b/src/static/style_main.css
@@ -66,7 +66,7 @@ input[type=text]:focus, input[type=password]:focus, input[type=search]:focus, in
     border-bottom: 0.05rem solid var(--dark-blue);
 }
 
-input[type=submit], input[type=button], input[type=date], a.btn, select, button {
+input[type=submit], input[type=button], input[type=date], a.btn, select, button, #home-login {
     padding: 0.5rem 0.7rem;
     background: var(--white);
     box-shadow: 0rem 0.2rem 0.4rem var(--btn-shadow);
@@ -92,7 +92,7 @@ input[type=text]:disabled, input[type=search]:disabled, input[type=number]:disab
     background: var(--light-gray);
 }
 
-input[type=submit] {
+input[type=submit], #home-login {
     color: white;
     font-weight: bold;
     background: var(--blue);
