--- a/src/static/style_main.css
+++ b/src/static/style_main.css
@@ -66,7 +66,7 @@ input[type=text]:focus, input[type=password]:focus, input[type=search]:focus, in
     border-bottom: 0.05rem solid var(--dark-blue);
 }
 
-input[type=submit], input[type=button], input[type=date], a.btn, select, button, #home-login {
+input[type=submit], input[type=button], input[type=date], a.btn, select, button {
     padding: 0.5rem 0.7rem;
     background: var(--white);
     box-shadow: 0rem 0.2rem 0.4rem var(--btn-shadow);
@@ -76,6 +76,20 @@ input[type=submit], input[type=button], input[type=date], a.btn, select, button,
     width: fit-content;
     text-decoration: none;
     transition: background 0.1s, box-shadow 0.1s;
+}
+
+#home-login{
+    padding: 0.6rem 1rem;
+    border: none;
+    border-radius: 0.5rem;
+    width: -moz-fit-content;
+    width: fit-content;
+    text-decoration: none;
+    transition: background 0.1s, box-shadow 0.1s;
+
+    color: white;
+    font-weight: bold;
+    background: var(--black);
 }
 
 input[type=submit]:hover, input[type=button]:hover, input[type=date]:hover, a.btn:hover, select:hover, button:hover {
@@ -92,7 +106,7 @@ input[type=text]:disabled, input[type=search]:disabled, input[type=number]:disab
     background: var(--light-gray);
 }
 
-input[type=submit], #home-login {
+input[type=submit] {
     color: white;
     font-weight: bold;
     background: var(--blue);
