--- a/src/templates/user/add.html
+++ b/src/templates/user/add.html
@@ -51,7 +51,7 @@
 
         let roles = {
             "Custodian": 1,
-            "Personnel": 2
+            // "Personnel": 2
         }
 
         for (let i = 0; i < 4; i++) {
